--- a/TemplateData/style.css
+++ b/TemplateData/style.css
@@ -1,3 +1,23 @@
+body {
+    background-color:#231F20;
+    color: whitesmoke;
+}
+
+h1 {
+    font-family: 'Comic Sans MS';
+    color: whitesmoke;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    display: flex;
+}
+
+#how-to-play {
+    position:absolute;
+    transform: translate(-50%);
+    top: 50%;
+}
+
 body { padding: 0; margin: 0 }
 #unity-container { position: absolute }
 #unity-container.unity-desktop { left: 50%; top: 50%; transform: translate(-50%, -50%) }
